--- a/.github/workflows/depoyment-trigger.yml
+++ b/.github/workflows/depoyment-trigger.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: Script triggered
-        run: echo "Triggering Wokflow ${{ github.event.client_payload.sha }}"
+        run: echo "Triggering Wokflow ${{ github.event.client_payload.tag }}"
         
   
