--- a/api/service.yml
+++ b/api/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: login-service
+  name: invitation-card-api-service
 spec:
   ports:
     - targetPort: 3000
       port: 3000
   selector:
-    app: invitation-card-login
+    app: invitation-card-api
     type: back-end
 
